changed inex file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html">Contact</a></li>
                 <li><a href="index.html">About</a></li>
-                <li><a href="index.html">Analyze</a></li>
+                <li><a href="index.htmlo">Analyze</a></li>
             </ol>
         </div>
         <div class="title-sec">
